--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <meta charset="utf-8">
 <title>msgcat</title>
 <link rel="build/msgcat.css">
+<div id="wrapper"></div>
 <script src="config.js"></script>
 <script src="build/msgcat.js"></script>
