--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>msgcat</title>
-<link rel="build/msgcat.css">
+<link rel="stylesheet" href="build/msgcat.css">
 <div id="wrapper"></div>
 <script src="config.js"></script>
 <script src="build/msgcat.js"></script>
